<resources>
    <string name="app_name">TRON triden</string>
    <string name="announce_transactions_to_the_chain">Announce transactions to the chain</string>
    <string name="please_paste_the_signed_transaction_data_here">Please paste the signed transaction data here...</string>
    <string name="announcement_transaction">Announcement transaction</string>
    <string name="please_enter_wallet_address">Please enter wallet address</string>
    <string name="query_trx_balance">Query TRX balance</string>
    <string name="please_enter_the_sender_s_address">Please enter the sender\'s address</string>
    <string name="please_enter_the_payer_password">Please enter the payer password</string>
    <string name="gas_consumption_limit">Gas consumption limit</string>
    <string name="usdt_transfer_amount">USDT transfer amount</string>
    <string name="please_enter_the_beneficiary_address">Please enter the beneficiary address</string>
    <string name="copy_transaction_information_to_clipboard">Copy transaction information to clipboard</string>
    <string name="create_transfer_information">Create transfer information</string>
    <string name="set_wallet_password">Set wallet password</string>
    <string name="please_enter_a_password">Please enter a password (minimum 6 characters)</string>
    <string name="repeat_to_confirm_password">Repeat to confirm password</string>
    <string name="copy_address_to_clipboard">copy address to clipboard</string>
    <string name="create_wallet">create wallet</string>
    <string name="your_keystore">Your keystore</string>
    <string name="copy_keystore_to_clipboard">copy keystore to clipboard</string>
    <string name="export_keystore">export keystore</string>
    <string name="please_enter_wallet_password">Please enter wallet password</string>
    <string name="copy_to_clipboard">copy to clipboard</string>
    <string name="export_private_key">export private key</string>
    <string name="please_enter_the_wallet_private_key">Please enter the wallet private key</string>
    <string name="import_wallet">import wallet</string>
    <string name="import_new_wallet_via_keystore">Import new wallet via keystore</string>
    <string name="please_paste_keystore_data_here">Please paste keystore data here...</string>
    <string name="wallet_key_password">wallet key password</string>
    <string name="password">Password</string>
    <string name="wallet_password">wallet password</string>
    <string name="version_0_9_1">Version 0.9.1</string>
    <string name="apply_for_a_new_wallet">Apply for a new wallet</string>
    <string name="export_wallet_private_key">Export wallet private key</string>
    <string name="export_wallet_keystore">Export wallet keystore</string>
    <string name="import_new_wallet_with_private_key">Import new wallet with private key</string>
    <string name="query_usdt_balance">Query USDT balance</string>
    <string name="trx_transfer">TRX transfer</string>
    <string name="usdt_transfer">USDT transfer</string>
    <string name="create_a_multi_signature_account">Create a multi-signature account</string>
    <string name="create_a_multi_signature_transfer">Create a multi-signature transfer</string>
    <string name="multi_signature_transfer_signature">Multi-signature transfer signature</string>
    <string name="publish_transfer_information">Publish transfer information</string>
    <string name="trx_transfer_amount">TRX transfer amount</string>
    <string name="transaction_data_that_needs_to_be_signed">Transaction data that needs to be signed</string>
    <string name="please_paste_transaction_data_here">Please paste transaction data here...</string>
    <string name="please_enter_the_signer_password">Please enter the signer password</string>
    <string name="start_signing">start signing</string>






    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="main">Main</string>
    <string name="check_balance">check_balance</string>
    <string name="trx20_token_balance">trx20_token_balance</string>
    <string name="create_trx20_transform">create_trx20_transform</string>
    <string name="import_wallet_keystore">import_wallet_keystore</string>
    <string name="import_private_key">import_private_key</string>
    <string name="send_trx">send_trx</string>
    <string name="send_trx20_token">send_trx20_token</string>
    <string name="sign_trx20_transform">sign_trx20_transform</string>
    <string name="boardcast_trx20_transform">boardcast_trx20_transform</string>
</resources>