<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/please_enter_wallet_address" />


        <TextView
            android:visibility="invisible"
            android:id="@+id/keystoreT"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:hint="@string/your_keystore"
            android:textSize="18dp" />

        <Button
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_1_11"
            android:text="@string/copy_keystore_to_clipboard"
            android:textColor="@color/white"
            android:visibility="invisible" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_1_11"
            android:text="@string/export_keystore"
            android:textColor="@color/white" />



    </LinearLayout>
</layout>