<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/please_enter_the_sender_s_address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/please_enter_the_payer_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="3">


            <EditText
                android:id="@+id/gasLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/gas_consumption_limit"
                android:inputType="numberDecimal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="21000"
                android:textColor="@color/black"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ethAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/usdt_transfer_amount"
                android:inputType="numberDecimal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="@color/black" />


        </LinearLayout>

        <EditText
            android:id="@+id/receiverAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/please_enter_the_beneficiary_address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/sendERCToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_1_11"
            android:text="@string/usdt_transfer"
            android:textColor="@color/white" />


    </LinearLayout>
</layout>